generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Role {
  COLABORADOR
  MANAGER
  COORDENADOR
  ADMIN
  CONVIDADO
}

enum WorkCountry {
  PT
  BR
}

enum BrWorkState {
  SP
  RS
}

enum VacationCompanyExtraScope {
  ALL
  PT
  BR
  BR_SP
  BR_RS
}

enum VacationRequestType {
  VACATION
  ABSENCE_MEDICAL
  ABSENCE_TRAINING
}

enum VacationPartialDay {
  FULL
  AM
  PM
}

enum HourBankEntryType {
  CREDIT
  DEBIT
}

enum PermissionCategory {
  SYSTEM
  USERS
  TEAMS
  VACATIONS
  TRAININGS
  PROFILE
  RECEIPTS
  NOTIFICATIONS
}

enum PermissionGrantAction {
  GRANT
  REVOKE
}

enum VacationStatus {
  PENDING
  APPROVED
  REJECTED
  CANCELLED
}

enum ProfileOptionType {
  CARGO
  FUNCAO
}

model Team {
  id            String      @id @default(ulid())
  name          String      @unique
  costCenter    String?
  color         String?     @default("#4B79F5")
  managerId     String?
  coordinatorId String?
  parentTeamId  String?
  createdAt     DateTime    @default(now())
  updatedAt     DateTime    @updatedAt
  members       User[]      @relation("TeamMembers")
  memberships   TeamMembership[]
  manager       User?       @relation("TeamManager", fields: [managerId], references: [id], onDelete: SetNull)
  coordinator   User?       @relation("TeamCoordinator", fields: [coordinatorId], references: [id], onDelete: SetNull)
  parentTeam    Team?       @relation("SubTeams", fields: [parentTeamId], references: [id], onDelete: SetNull)
  subTeams      Team[]      @relation("SubTeams")
  vacationRequests Vacation[] @relation("VacationContextTeam")

  @@index([parentTeamId])
}

model User {
  id            String         @id @default(ulid())
  username      String         @unique
  email         String         @unique
  passwordHash  String
  role          Role           @default(COLABORADOR)
  isActive      Boolean        @default(true)
  isRootAccess  Boolean        @default(false)
  hasAccessTotal Boolean       @default(false)
  accessTotalGrantedById String?
  accessTotalGrantedAt DateTime?
  deactivatedAt DateTime?
  teamId        String?
  createdAt     DateTime       @default(now())
  updatedAt     DateTime       @updatedAt
  team          Team?          @relation("TeamMembers", fields: [teamId], references: [id], onDelete: SetNull)
  teamMemberships TeamMembership[]
  managedTeams  Team[]         @relation("TeamManager")
  coordinatedTeams Team[]      @relation("TeamCoordinator")
  profile       Profile?
  notifications Notification[]
  trainings     Training[]       @relation("TrainingUser")
  assignedTrainings Training[]   @relation("TrainingAssigner")
  vacations     Vacation[]       @relation("VacationUser")
  reviewedVacations Vacation[]    @relation("VacationReviewer")
  processadoVacations Vacation[]  @relation("VacationProcessado")
  vacationApprovalSteps VacationApproval[]
  profileChangeRequests ProfileChangeRequest[] @relation("ProfileChangeRequestUser")
  reviewedProfileChangeRequests ProfileChangeRequest[] @relation("ProfileChangeRequestReviewer")
  createdProfileOptions ProfileDropdownOption[] @relation("ProfileOptionAuthor")
  createdVacationCompanyDays VacationCompanyExtraDay[] @relation("VacationCompanyExtraDayAuthor")
  invitedEmployeeAdmissions EmployeeAdmission[] @relation("EmployeeAdmissionInviter")
  reviewedEmployeeAdmissions EmployeeAdmission[] @relation("EmployeeAdmissionReviewer")
  completedEmployeeAdmissions EmployeeAdmission[] @relation("EmployeeAdmissionCompleter")
  permissionAssignments UserPermission[] @relation("PermissionTargetUser")
  permissionAssignmentsGranted UserPermission[] @relation("PermissionGrantAuthor")
  accessTotalGrantedBy User?  @relation("AccessTotalGrantAuthor", fields: [accessTotalGrantedById], references: [id], onDelete: SetNull)
  accessTotalGrantedTo User[] @relation("AccessTotalGrantAuthor")
  permissionGrantEventsAuthored PermissionGrant[] @relation("PermissionGrantActor")
  permissionGrantEventsReceived PermissionGrant[] @relation("PermissionGrantTarget")
  vacationBalanceCredits VacationBalanceCredit[] @relation("VacationBalanceCreditTarget")
  vacationBalanceCreditsGranted VacationBalanceCredit[] @relation("VacationBalanceCreditAuthor")
  hourBankEntries HourBankEntry[] @relation("HourBankEntryTarget")
  hourBankEntriesCreated HourBankEntry[] @relation("HourBankEntryAuthor")
  weeklyHourBankReportsCreated WeeklyHourBankReport[] @relation("WeeklyHourBankReportAuthor")

  @@index([accessTotalGrantedById])
}

model WeeklyHourBankReport {
  id             String   @id @default(ulid())
  weekLabel      String   @unique
  generatedAt    DateTime @default(now())
  periodStart    String
  periodEnd      String
  totalUsers     Int
  positiveUsers  Int
  negativeUsers  Int
  exceededUsers  Int
  pdfFileName    String
  pdfLinkPath    String
  pdfPublicUrl   String
  generatedById  String?
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  generatedBy    User?    @relation("WeeklyHourBankReportAuthor", fields: [generatedById], references: [id], onDelete: SetNull)

  @@index([generatedAt])
  @@index([generatedById])
}

model VacationBalanceCredit {
  id          String   @id @default(ulid())
  userId      String
  year        Int
  days        Float
  reason      String
  createdById String?
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  user        User     @relation("VacationBalanceCreditTarget", fields: [userId], references: [id], onDelete: Cascade)
  createdBy   User?    @relation("VacationBalanceCreditAuthor", fields: [createdById], references: [id], onDelete: SetNull)

  @@index([userId, year])
  @@index([createdById])
}

model HourBankEntry {
  id          String            @id @default(ulid())
  userId      String
  type        HourBankEntryType
  hours       Float
  reason      String
  source      String            @default("MANUAL")
  createdById String?
  createdAt   DateTime          @default(now())
  updatedAt   DateTime          @updatedAt
  user        User              @relation("HourBankEntryTarget", fields: [userId], references: [id], onDelete: Cascade)
  createdBy   User?             @relation("HourBankEntryAuthor", fields: [createdById], references: [id], onDelete: SetNull)

  @@index([userId, createdAt])
  @@index([createdById])
  @@index([type, createdAt])
}

model TeamMembership {
  id            String   @id @default(ulid())
  userId        String
  teamId        String
  membershipRole String  @default("PARTICIPANT")
  isApprover    Boolean  @default(false)
  approvalLevel Int?
  isActive      Boolean  @default(true)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  user          User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  team          Team     @relation(fields: [teamId], references: [id], onDelete: Cascade)

  @@unique([userId, teamId])
  @@index([teamId, isActive])
  @@index([userId, isActive])
}

model Profile {
  id                             String   @id @default(ulid())
  userId                         String   @unique
  nomeCompleto                   String   @default("")
  nomeAbreviado                  String   @default("")
  dataNascimento                 String   @default("")
  genero                         String   @default("")
  estadoCivil                    String   @default("")
  habilitacoesLiterarias         String   @default("")
  curso                          String   @default("")
  faculdade                      String   @default("")
  nacionalidade                  String   @default("")
  emailPessoal                   String   @default("")
  telemovel                      String   @default("")
  githubUser                     String   @default("")
  moradaFiscal                   String   @default("")
  endereco                       String   @default("")
  localidade                     String   @default("")
  codigoPostal                   String   @default("")
  matriculaCarro                 String   @default("")
  localNascimentoPais            String   @default("")
  localNascimentoCidade          String   @default("")
  nomePai                        String   @default("")
  nomeMae                        String   @default("")
  cartaoCidadao                  String   @default("")
  validadeCartaoCidadao          String   @default("")
  nif                            String   @default("")
  cpf                            String   @default("")
  pis                            String   @default("")
  ctps                           String   @default("")
  ctpsSerie                      String   @default("")
  ctpsDataExpedicao              String   @default("")
  rg                             String   @default("")
  rgOrgaoEmissor                 String   @default("")
  rgDataExpedicao                String   @default("")
  cnh                            String   @default("")
  cnhCategoria                   String   @default("")
  cnhDataValidade                String   @default("")
  tituloEleitor                  String   @default("")
  zonaEleitoral                  String   @default("")
  secaoEleitoral                 String   @default("")
  certificadoReservista          String   @default("")
  niss                           String   @default("")
  iban                           String   @default("")
  situacaoIrs                    String   @default("")
  numeroDependentes              String   @default("")
  declaracaoIrs                  String   @default("")
  irsJovem                       String   @default("")
  anoPrimeiroDesconto            String   @default("")
  primeiroEmprego                Boolean  @default(false)
  recebeAposentadoria            Boolean  @default(false)
  recebeSeguroDesemprego         Boolean  @default(false)
  valeTransporte                 Boolean  @default(false)
  numeroCartaoContinente         String   @default("")
  voucherNosData                 String   @default("")
  comprovativoMoradaFiscal       String   @default("")
  comprovativoCartaoCidadao      String   @default("")
  comprovativoIban               String   @default("")
  comprovativoCartaoContinente   String   @default("")
  contactoEmergenciaNome         String   @default("")
  contactoEmergenciaParentesco   String   @default("")
  contactoEmergenciaNumero       String   @default("")
  cargo                          String   @default("")
  categoriaProfissional          String   @default("")
  numeroMecanografico            String   @default("")
  funcao                         String   @default("")
  dataInicioContrato             String   @default("")
  dataFimContrato                String   @default("")
  tipoContrato                   String   @default("")
  regimeHorario                  String   @default("")
  workCountry                    WorkCountry @default(PT)
  brWorkState                    BrWorkState?
  hourBankLimitHours             Float    @default(40)
  unjustifiedAbsences            Int      @default(0)
  isIntern                       Boolean  @default(false)
  soldVacationDays               Int      @default(0)
  photoUrl                       String   @default("")
  certificadoHabilitacoesUrl     String   @default("")
  cartaConducaoUrl               String   @default("")
  createdAt                      DateTime @default(now())
  updatedAt                      DateTime @updatedAt
  user                           User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([workCountry])
  @@index([workCountry, brWorkState])
}

model ProfileDropdownOption {
  id              String            @id @default(ulid())
  type            ProfileOptionType
  label           String
  normalizedValue String
  groupLabel      String?
  isActive        Boolean           @default(true)
  createdById     String?
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt
  createdBy       User?             @relation("ProfileOptionAuthor", fields: [createdById], references: [id], onDelete: SetNull)

  @@unique([type, normalizedValue])
  @@index([type, isActive])
  @@index([createdById])
}

model SystemSetting {
  key       String   @id
  boolValue Boolean?
  textValue String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
}

model Notification {
  id        String   @id @default(ulid())
  userId    String
  title     String
  message   String
  isRead    Boolean  @default(false)
  createdAt DateTime @default(now())
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, isRead, createdAt])
  @@index([userId, createdAt])
}

model Training {
  id            String   @id @default(ulid())
  userId        String
  nome          String
  link          String   @default("")
  horas         Float
  dataInicio    String   @default("")
  entidade      String   @default("")
  dataConclusao String   @default("")
  status        String   @default("CONCLUIDA")
  assignedByUserId String?
  completedAt   DateTime?
  certificateLink String   @default("")
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  user          User     @relation("TrainingUser", fields: [userId], references: [id], onDelete: Cascade)
  assignedBy    User?    @relation("TrainingAssigner", fields: [assignedByUserId], references: [id], onDelete: SetNull)

  @@index([userId, createdAt])
  @@index([assignedByUserId, createdAt])
  @@index([status, createdAt])
}

model Vacation {
  id           String   @id @default(ulid())
  userId       String
  contextTeamId String?
  versionOfId  String?
  versionNumber Int      @default(1)
  dataInicio   String
  dataFim      String
  partialDay   VacationPartialDay @default(FULL)
  observacoes  String   @default("")
  requestType  VacationRequestType @default(VACATION)
  attachmentLink String @default("")
  status       VacationStatus @default(PENDING)
  reviewedById String?
  reviewedAt   DateTime?
  reviewReason String   @default("")
  approvedByRole String @default("")
  processadoAt DateTime?
  processadoById String?
  realizadoAt  DateTime?
  realizadoByIds Json?
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  user         User     @relation("VacationUser", fields: [userId], references: [id], onDelete: Cascade)
  reviewedBy   User?    @relation("VacationReviewer", fields: [reviewedById], references: [id], onDelete: SetNull)
  processadoBy User?    @relation("VacationProcessado", fields: [processadoById], references: [id], onDelete: SetNull)
  contextTeam  Team?    @relation("VacationContextTeam", fields: [contextTeamId], references: [id], onDelete: SetNull)
  versionOf    Vacation? @relation("VacationVersions", fields: [versionOfId], references: [id], onDelete: SetNull)
  versions     Vacation[] @relation("VacationVersions")
  approvals    VacationApproval[]

  @@index([userId])
  @@index([status])
  @@index([userId, status])
  @@index([contextTeamId])
  @@index([versionOfId])
}

model VacationApproval {
  id          String   @id @default(ulid())
  vacationId  String
  approverId  String
  approvalLevel Int
  status      String   @default("PENDING")
  decidedAt   DateTime?
  reason      String   @default("")
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  vacation    Vacation @relation(fields: [vacationId], references: [id], onDelete: Cascade)
  approver    User     @relation(fields: [approverId], references: [id], onDelete: Cascade)

  @@unique([vacationId, approverId])
  @@index([approverId, status])
  @@index([vacationId, approvalLevel, status])
}

model VacationCompanyExtraDay {
  id          String      @id @default(ulid())
  scope       VacationCompanyExtraScope @default(PT)
  date        String
  label       String      @default("Dia dado pela empresa")
  createdById String?
  createdAt   DateTime    @default(now())
  updatedAt   DateTime    @updatedAt
  createdBy   User?       @relation("VacationCompanyExtraDayAuthor", fields: [createdById], references: [id], onDelete: SetNull)

  @@unique([scope, date])
  @@index([scope, date])
  @@index([createdById])
}

model ProfileChangeRequest {
  id               String   @id @default(ulid())
  userId           String
  requestedData    Json
  changesSummary   String
  status           String   @default("PENDING")  // "PENDING" | "APPROVED" | "REJECTED" | "PARTIALLY_REJECTED"
  rejectedFields   Json     @default("{}")       // {"fieldName": "motivo da rejeição"}
  approvedFields   Json     @default("{}")       // Campos aprovados (apenas em PARTIALLY_REJECTED)
  reviewedById     String?
  reviewedAt       DateTime?
  reviewReason     String   @default("")
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt
  user             User     @relation("ProfileChangeRequestUser", fields: [userId], references: [id], onDelete: Cascade)
  reviewedBy       User?    @relation("ProfileChangeRequestReviewer", fields: [reviewedById], references: [id], onDelete: SetNull)

  @@index([userId, status])
  @@index([status, createdAt])
  @@index([status, reviewedAt])
  @@index([reviewedById])
}

model EmployeeAdmission {
  id                 String      @id @default(ulid())
  fullName           String
  personalEmail      String
  workCountry        WorkCountry
  brWorkState        BrWorkState?
  status             String      @default("INVITED")
  personalData       Json        @default("{}")
  contractData       Json        @default("{}")
  companyEmail       String      @default("")
  companyUsername    String      @default("")
  reviewReason       String      @default("")
  submissionTokenHash String     @unique
  tokenExpiresAt     DateTime
  lastInvitationSentAt DateTime?
  submittedAt        DateTime?
  reviewedAt         DateTime?
  completedAt        DateTime?
  invitedById        String
  reviewedById       String?
  completedById      String?
  createdAt          DateTime    @default(now())
  updatedAt          DateTime    @updatedAt
  invitedBy          User        @relation("EmployeeAdmissionInviter", fields: [invitedById], references: [id], onDelete: Cascade)
  reviewedBy         User?       @relation("EmployeeAdmissionReviewer", fields: [reviewedById], references: [id], onDelete: SetNull)
  completedBy        User?       @relation("EmployeeAdmissionCompleter", fields: [completedById], references: [id], onDelete: SetNull)

  @@index([personalEmail, status])
  @@index([status, createdAt])
  @@index([workCountry, status])
  @@index([invitedById])
  @@index([reviewedById])
  @@index([completedById])
}

model Permission {
  id                  String             @id @default(ulid())
  code                String             @unique
  label               String
  description         String
  category            PermissionCategory
  requiresRestrictions Boolean            @default(false)
  createdAt           DateTime           @default(now())
  updatedAt           DateTime           @updatedAt
  userPermissions     UserPermission[]
  grants              PermissionGrant[]
}

model UserPermission {
  id                    String   @id @default(ulid())
  userId                String
  permissionId          String
  isEnabled             Boolean  @default(true)
  restrictedToTeams     String[] @default([])
  restrictedToCountries String[] @default([])
  restrictedToLevels    String[] @default([])
  customRestrictions    Json?
  notes                 String?
  grantedById           String?
  grantedAt             DateTime @default(now())
  updatedAt             DateTime @updatedAt
  user                  User     @relation("PermissionTargetUser", fields: [userId], references: [id], onDelete: Cascade)
  permission            Permission @relation(fields: [permissionId], references: [id], onDelete: Cascade)
  grantedBy             User?    @relation("PermissionGrantAuthor", fields: [grantedById], references: [id], onDelete: SetNull)

  @@unique([userId, permissionId])
  @@index([userId])
  @@index([userId, isEnabled])
  @@index([userId, isEnabled, permissionId])
  @@index([permissionId])
  @@index([grantedById])
}

model PermissionGrant {
  id            String              @id @default(ulid())
  actorUserId   String?
  targetUserId   String?
  permissionId  String
  action        PermissionGrantAction
  reason        String?
  createdAt     DateTime            @default(now())
  actorUser     User?               @relation("PermissionGrantActor", fields: [actorUserId], references: [id], onDelete: SetNull)
  targetUser    User?               @relation("PermissionGrantTarget", fields: [targetUserId], references: [id], onDelete: SetNull)
  permission    Permission          @relation(fields: [permissionId], references: [id], onDelete: Cascade)

  @@index([actorUserId])
  @@index([targetUserId])
  @@index([permissionId])
  @@index([createdAt])
}
